k8s/app/game.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: game-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: game
      tier: frontend
  template:
    metadata:
      labels:
        app: game
        tier: frontend
    spec:
      containers:
      - name: frontend
        image: docker.io/vigneshvj/newrelic-interactive-demo-frontend:latest
        resources:
          requests:
            cpu: 100m
            memory: 200Mi
          limits:
            cpu: 200m
            memory: 500Mi
        ports:
          - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: game-frontend
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb" # Use Network Load Balancer (NLB)
    service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing" # or "internal" as needed
spec:
  selector:
    app: game
    tier: frontend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
  type: LoadBalancer
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: game-frontend-ingress
  annotations:
    kubernetes.io/ingress.class: "alb"
    alb.ingress.kubernetes.io/scheme: "internet-facing"
spec:
  rules:
  - host: your-domain.com
    http:
      paths:
      - path: /app
        pathType: Prefix
        backend:
          service:
            name: game-frontend
            port:
              number: 80
